# feature_extractor

./: pyproject.toml
bbox_dataset_generation/: bbox_generation_algorithm_version_final.py  requirements.txt
bbox_dataset_generation/georeferencing/microsoft_building_footprints/: georeferencing_final.ipynb
bbox_hypothesis_experiments/: pyproject.toml
bbox_hypothesis_experiments/data/: data_check.py  not_school_data.csv  school_data.csv
bbox_hypothesis_experiments/data/MNG/: data_check.py  make_csv.py  not_school_data.csv  school_data.csv
bbox_hypothesis_experiments/data/MNG/embeddings/DYNOv2_original/: school_embeds.npy
bbox_hypothesis_experiments/embeddings/: dynov2_calculation.py
bbox_hypothesis_experiments/experiment_visualization/: experiment_1_plot.py  experiment_1_plot_copy.py
bbox_hypothesis_experiments/experiments/: experiment_v1_cross_val_v2_original.py  experiment_v2_cross_val_v2_bbox.py  experiment_v3_cross_val_v2_mix.py  experiment_v4_cross_val.py  experiment_v6_cross_val.py
bbox_hypothesis_experiments/experiments/MNG/: experiment_1_original.py  experiment_4.py
bbox_hypothesis_experiments/experiments/SDN/: experiment_1_cross_val_v3_bbox.py  experiment_1_cross_val_v3_original.py  experiment_3_cross_val_v3_mix.py  experiment_v1_cross_val_v2_original.py  experiment_v3_cross_val_v2_mix.py  experiment_v4_cross_val.py  experiment_v6_cross_val.py
